--- a/documentor/Makefile
+++ b/documentor/Makefile
@@ -1,66 +1,61 @@
 .PHONY: all objdir clean realclean distclean
 
-# CONTENT
+# CORE VARIABLES
 
 MODULE := documentor
 CONFIG := release
+ifndef COMPILER
 COMPILER := default
+endif
+
 TARGET_TYPE = executable
+
+# FLAGS
+
+ECFLAGS =
+ifndef DEBIAN_PACKAGE
+CFLAGS =
+endif
+CECFLAGS =
+OFLAGS =
+LDFLAGS =
+LIBS =
+
+ifdef DEBUG
+NOSTRIP := y
+endif
+
+ifdef EXECUTABLE_TARGET
+CONSOLE = -mwindows
+endif
+
+# INCLUDES
+
+_CF_DIR = ../
+
+include $(_CF_DIR)crossplatform.mk
+include $(_CF_DIR)include.mk
+
+# CUSTOM TOOLCHAIN / COMPILER CONFIG
+
+export LD_LIBRARY_PATH=../obj/$(PLATFORM)/lib
+export DYLD_LIBRARY_PATH=../obj/$(PLATFORM)/lib
+ECP := $(call psep,../obj/$(PLATFORM)/bin/ecp)
+ECC := $(call psep,../obj/$(PLATFORM)/bin/ecc)
+ECS := $(call psep,../obj/$(PLATFORM)/bin/ecs)
+EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
+
+# END OF CUSTOM TOOLCHAIN / COMPILER CONFIG
+
+# POST-INCLUDES VARIABLES
 
 OBJ = obj/$(CONFIG).$(PLATFORM)/
 
 RES = 
 
-CONSOLE = -mwindows
-
 TARGET = obj/$(CONFIG).$(PLATFORM)/documentor$(E)
 
-OBJECTS = \
-	$(OBJ)htmlParser.o \
-	$(OBJ)HTMLView.o \
-	$(OBJ)lines.o \
-	$(OBJ)tables.o \
-	$(OBJ)IDESettings.o \
-	$(OBJ)OldIDESettings.o \
-	$(OBJ)StringsBox.o \
-	$(OBJ)Documentor.o \
-	$(OBJ)SettingsDialog.o \
-	$(OBJ)$(MODULE).main$(O)
-
-COBJECTS = \
-	$(OBJ)htmlParser.c \
-	$(OBJ)HTMLView.c \
-	$(OBJ)lines.c \
-	$(OBJ)tables.c \
-	$(OBJ)IDESettings.c \
-	$(OBJ)OldIDESettings.c \
-	$(OBJ)StringsBox.c \
-	$(OBJ)Documentor.c \
-	$(OBJ)SettingsDialog.c
-
-SYMBOLS = \
-	$(OBJ)htmlParser.sym \
-	$(OBJ)HTMLView.sym \
-	$(OBJ)lines.sym \
-	$(OBJ)tables.sym \
-	$(OBJ)IDESettings.sym \
-	$(OBJ)OldIDESettings.sym \
-	$(OBJ)StringsBox.sym \
-	$(OBJ)Documentor.sym \
-	$(OBJ)SettingsDialog.sym
-
-IMPORTS = \
-	$(OBJ)htmlParser.imp \
-	$(OBJ)HTMLView.imp \
-	$(OBJ)lines.imp \
-	$(OBJ)tables.imp \
-	$(OBJ)IDESettings.imp \
-	$(OBJ)OldIDESettings.imp \
-	$(OBJ)StringsBox.imp \
-	$(OBJ)Documentor.imp \
-	$(OBJ)SettingsDialog.imp
-
-SOURCES = \
+_ECSOURCES = \
 	../extras/html/htmlParser.ec \
 	../extras/html/HTMLView.ec \
 	../extras/html/lines.ec \
@@ -71,48 +66,52 @@ SOURCES = \
 	src/Documentor.ec \
 	src/SettingsDialog.ec
 
+ECSOURCES = $(call shwspace,$(_ECSOURCES))
+
+COBJECTS = $(call shwspace,$(addprefix $(OBJ),$(patsubst %.ec,%$(C),$(notdir $(_ECSOURCES)))))
+
+SYMBOLS = $(call shwspace,$(addprefix $(OBJ),$(patsubst %.ec,%$(S),$(notdir $(_ECSOURCES)))))
+
+IMPORTS = $(call shwspace,$(addprefix $(OBJ),$(patsubst %.ec,%$(I),$(notdir $(_ECSOURCES)))))
+
+ECOBJECTS = $(call shwspace,$(addprefix $(OBJ),$(patsubst %.ec,%$(O),$(notdir $(_ECSOURCES)))))
+
+BOWLS = $(call shwspace,$(addprefix $(OBJ),$(patsubst %.ec,%$(B),$(notdir $(_ECSOURCES)))))
+
+OBJECTS = $(ECOBJECTS) $(OBJ)$(MODULE).main$(O)
+
+SOURCES = $(ECSOURCES)
+
 RESOURCES = \
 	locale/zh_CN/LC_MESSAGES/documentor.mo \
 	locale/es_ES/LC_MESSAGES/documentor.mo \
 	res/documentorIcon.png
 
-ifndef DEBIAN_PACKAGE
-CFLAGS =
+LIBS += $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
+
+ifndef STATIC_LIBRARY_TARGET
+LIBS += \
+	$(call _L,ecere)
 endif
-OFLAGS =
 
-# CROSS-PLATFORM MAGIC
+CFLAGS += \
+	 $(if $(DEBIAN_PACKAGE),$(CPPFLAGS),) $(if $(DEBUG), -D_DEBUG,) \
+	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FORCE_32_BIT) $(FPIC) -w
 
-include ../crossplatform.mk
-include ../include.mk
 
-# TOOLCHAIN
-export LD_LIBRARY_PATH = ../obj/$(PLATFORM)/lib/
-export DYLD_LIBRARY_PATH = ../obj/$(PLATFORM)/lib/
-ECP := $(call psep,../obj/$(PLATFORM)/bin/ecp)
-ECC := $(call psep,../obj/$(PLATFORM)/bin/ecc)
-ECS := $(call psep,../obj/$(PLATFORM)/bin/ecs)
-EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
+ECFLAGS += \
+	 -nolinenumbers
 
-# FLAGS
 
-CFLAGS += -fmessage-length=0 -O2 -ffast-math $(FORCE_32_BIT) $(FPIC) -w
 
-CECFLAGS =
 
-ECFLAGS = -nolinenumbers
+CECFLAGS += -cpp $(call escspace,$(CPP))
 
+ifndef STATIC_LIBRARY_TARGET
 OFLAGS += $(FORCE_32_BIT) \
 	 -L../obj/$(PLATFORM)/bin \
 	 -L../obj/$(PLATFORM)/lib
-
-LIBS = -lecere $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
-
-UPXFLAGS = -9 -q
-
-# HARD CODED PLATFORM-SPECIFIC OPTIONS
-ifdef LINUX_TARGET
-OFLAGS += -Wl,--no-undefined
+OFLAGS += $(LDFLAGS)
 endif
 
 # TARGETS
@@ -132,13 +131,17 @@ $(OBJ)$(MODULE).main.c: $(OBJ)$(MODULE).main.ec
 $(SYMBOLS): | objdir
 $(OBJECTS): | objdir
 $(TARGET): $(SOURCES) $(RESOURCES) $(SYMBOLS) $(OBJECTS) | objdir
+ifndef STATIC_LIBRARY_TARGET
 	$(CC) $(OFLAGS) $(OBJECTS) $(LIBS) -o $(TARGET) $(INSTALLNAME)
 ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
 endif
-	$(EAR) awq $(TARGET) res/documentorIcon.png ""
-	$(EAR) awq $(TARGET) locale/zh_CN/LC_MESSAGES/documentor.mo "locale/zh_CN/LC_MESSAGES"
-	$(EAR) awq $(TARGET) locale/es_ES/LC_MESSAGES/documentor.mo "locale/es_ES/LC_MESSAGES"
+	$(EAR) $(EARFLAGS) $(TARGET) res/documentorIcon.png ""
+	$(EAR) $(EARFLAGS) $(TARGET) locale/zh_CN/LC_MESSAGES/documentor.mo "locale/zh_CN/LC_MESSAGES"
+	$(EAR) $(EARFLAGS) $(TARGET) locale/es_ES/LC_MESSAGES/documentor.mo "locale/es_ES/LC_MESSAGES"
+else
+	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
+endif
 	$(call cpq,$(TARGET),../obj/$(PLATFORM)/bin/)
 
 # SYMBOL RULES
@@ -232,13 +235,15 @@ $(OBJ)$(MODULE).main$(O): $(OBJ)$(MODULE).main.c
 	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)$(MODULE).main.c -o $(OBJ)$(MODULE).main$(O)
 
 clean: objdir
-	$(call rmq,$(OBJ)$(MODULE).main.c $(OBJ)$(MODULE).main.ec $(OBJ)$(MODULE).main$(I) $(OBJ)$(MODULE).main$(S) $(TARGET))
-	$(call rmq,$(OBJECTS))
+	$(call rmq,$(OBJ)$(MODULE).main.o $(OBJ)$(MODULE).main.c $(OBJ)$(MODULE).main.ec $(OBJ)$(MODULE).main$(I) $(OBJ)$(MODULE).main$(S) $(TARGET))
+	$(call rmq,$(_OBJECTS))
+	$(call rmq,$(ECOBJECTS))
 	$(call rmq,$(COBJECTS))
+	$(call rmq,$(BOWLS))
 	$(call rmq,$(IMPORTS))
 	$(call rmq,$(SYMBOLS))
 
-realclean:
+realclean: clean
 	$(call rmrq,$(OBJ))
 
 distclean:
