--- a/ecere/Makefile.ecereCOM
+++ b/ecere/Makefile.ecereCOM
@@ -1,25 +1,55 @@
 .PHONY: all objdir clean realclean distclean
 
-# CONTENT
+# CORE VARIABLES
 
 MODULE := ecereCOM
 CONFIG := release
+ifndef COMPILER
 COMPILER := default
+endif
+
 TARGET_TYPE = sharedlib
+
+# FLAGS
+
+ECFLAGS =
+ifndef DEBIAN_PACKAGE
+CFLAGS =
+endif
+CECFLAGS =
+OFLAGS =
+LDFLAGS =
+LIBS =
+
+ifdef DEBUG
+NOSTRIP := y
+endif
+
+ifdef EXECUTABLE_TARGET
+CONSOLE = -mwindows
+endif
+
+# INCLUDES
+
+_CF_DIR = ../
+
+include $(_CF_DIR)crossplatform.mk
+include $(_CF_DIR)include.mk
+
+# CUSTOM TOOLCHAIN / COMPILER CONFIG
+
+ECP := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecp$(E))
+ECC := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecc$(E))
+ECS := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecs$(E))
+EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
+
+# END OF CUSTOM TOOLCHAIN / COMPILER CONFIG
+
+# POST-INCLUDES VARIABLES
 
 OBJ = obj/$(MODULE).$(CONFIG).$(PLATFORM)/
 
 RES = 
-
-ifndef DEBIAN_PACKAGE
-CFLAGS =
-endif
-OFLAGS =
-
-# CROSS-PLATFORM MAGIC
-
-include ../crossplatform.mk
-include ../include.mk
 
 ifdef LINUX_TARGET
 TARGET = obj/$(MODULE).$(CONFIG).$(PLATFORM)/$(LP)ecereCOM$(SO).0.44
@@ -29,81 +59,7 @@ TARGET = obj/$(MODULE).$(CONFIG).$(PLATFORM)/$(LP)ecereCOM$(SO)
 SONAME =
 endif
 
-OBJECTS = \
-	$(OBJ)Mutex.o \
-	$(OBJ)i18n.o \
-	$(OBJ)Array.o \
-	$(OBJ)AVLTree.o \
-	$(OBJ)BuiltInContainer.o \
-	$(OBJ)Container.o \
-	$(OBJ)CustomAVLTree.o \
-	$(OBJ)LinkList.o \
-	$(OBJ)List.o \
-	$(OBJ)Map.o \
-	$(OBJ)BinaryTree.o \
-	$(OBJ)BTNode.o \
-	$(OBJ)dataTypes.o \
-	$(OBJ)instance.o \
-	$(OBJ)String.o \
-	$(OBJ)OldList.o \
-	$(OBJ)instance.c.o \
-	$(OBJ)$(MODULE).main$(O)
-
-COBJECTS = \
-	$(OBJ)Mutex.c \
-	$(OBJ)i18n.c \
-	$(OBJ)Array.c \
-	$(OBJ)AVLTree.c \
-	$(OBJ)BuiltInContainer.c \
-	$(OBJ)Container.c \
-	$(OBJ)CustomAVLTree.c \
-	$(OBJ)LinkList.c \
-	$(OBJ)List.c \
-	$(OBJ)Map.c \
-	$(OBJ)BinaryTree.c \
-	$(OBJ)BTNode.c \
-	$(OBJ)dataTypes.c \
-	$(OBJ)instance.c \
-	$(OBJ)String.c \
-	$(OBJ)OldList.c
-
-SYMBOLS = \
-	$(OBJ)Mutex.sym \
-	$(OBJ)i18n.sym \
-	$(OBJ)Array.sym \
-	$(OBJ)AVLTree.sym \
-	$(OBJ)BuiltInContainer.sym \
-	$(OBJ)Container.sym \
-	$(OBJ)CustomAVLTree.sym \
-	$(OBJ)LinkList.sym \
-	$(OBJ)List.sym \
-	$(OBJ)Map.sym \
-	$(OBJ)BinaryTree.sym \
-	$(OBJ)BTNode.sym \
-	$(OBJ)dataTypes.sym \
-	$(OBJ)instance.sym \
-	$(OBJ)String.sym \
-	$(OBJ)OldList.sym
-
-IMPORTS = \
-	$(OBJ)Mutex.imp \
-	$(OBJ)i18n.imp \
-	$(OBJ)Array.imp \
-	$(OBJ)AVLTree.imp \
-	$(OBJ)BuiltInContainer.imp \
-	$(OBJ)Container.imp \
-	$(OBJ)CustomAVLTree.imp \
-	$(OBJ)LinkList.imp \
-	$(OBJ)List.imp \
-	$(OBJ)Map.imp \
-	$(OBJ)BinaryTree.imp \
-	$(OBJ)BTNode.imp \
-	$(OBJ)dataTypes.imp \
-	$(OBJ)instance.imp \
-	$(OBJ)String.imp \
-	$(OBJ)OldList.imp
-
-SOURCES = \
+_ECSOURCES = \
 	src/sys/Mutex.ec \
 	src/sys/i18n.ec \
 	src/com/containers/Array.ec \
@@ -119,44 +75,68 @@ SOURCES = \
 	src/com/dataTypes.ec \
 	src/com/instance.ec \
 	src/com/String.ec \
-	src/com/OldList.ec \
+	src/com/OldList.ec
+
+ECSOURCES = $(call shwspace,$(_ECSOURCES))
+
+COBJECTS = $(call shwspace,$(addprefix $(OBJ),$(patsubst %.ec,%$(C),$(notdir $(_ECSOURCES)))))
+
+SYMBOLS = $(call shwspace,$(addprefix $(OBJ),$(patsubst %.ec,%$(S),$(notdir $(_ECSOURCES)))))
+
+IMPORTS = $(call shwspace,$(addprefix $(OBJ),$(patsubst %.ec,%$(I),$(notdir $(_ECSOURCES)))))
+
+ECOBJECTS = $(call shwspace,$(addprefix $(OBJ),$(patsubst %.ec,%$(O),$(notdir $(_ECSOURCES)))))
+
+BOWLS = $(call shwspace,$(addprefix $(OBJ),$(patsubst %.ec,%$(B),$(notdir $(_ECSOURCES)))))
+
+_OBJECTS = \
+	$(OBJ)instance.c.o
+
+OBJECTS = $(_OBJECTS) $(ECOBJECTS) $(OBJ)$(MODULE).main$(O)
+
+SOURCES = $(ECSOURCES) \
 	src/com/instance.c
 
 RESOURCES =
 
-# TOOLCHAIN
+LIBS += $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 
-ECP := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecp$(E))
-ECC := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecc$(E))
-ECS := $(call psep,../compiler/bootstrap/obj/bin.$(PLATFORM)/ecs$(E))
-EAR := $(call psep,../obj/$(PLATFORM)/bin/ear)
-
-# FLAGS
-
-CFLAGS += -fmessage-length=0 -O2 -ffast-math $(FORCE_32_BIT) $(FPIC) -w \
-	 -DECERE_COM_MODULE -DBUILDING_ECERE_COM -DECERE_NOFILE
-
-CECFLAGS =
-
-ECFLAGS = -nolinenumbers -defaultns ecere
-
-OFLAGS += $(FORCE_32_BIT)
-
-LIBS = $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
-
-UPXFLAGS = -9 -q
-
-# HARD CODED PLATFORM-SPECIFIC OPTIONS
-ifdef LINUX_TARGET
-OFLAGS += -Wl,--no-undefined
+ifndef STATIC_LIBRARY_TARGET
+LIBS +=
 endif
+
+CFLAGS += \
+	 $(if $(DEBIAN_PACKAGE),$(CPPFLAGS),) $(if $(DEBUG), -D_DEBUG,) \
+	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FORCE_32_BIT) $(FPIC) -w \
+			 -DBUILDING_ECERE_COM \
+			 -DECERE_COM_MODULE \
+			 -DECERE_NOFILE
+
+
+ECFLAGS += \
+	 -nolinenumbers -defaultns ecere
+
 
 # PLATFORM-SPECIFIC OPTIONS
 
 ifdef LINUX_TARGET
 
-LIBS += -ldl -lm -lpthread
+ifndef STATIC_LIBRARY_TARGET
+LIBS += \
+	$(call _L,dl) \
+	$(call _L,m) \
+	$(call _L,pthread)
+endif
 
+endif
+
+
+
+CECFLAGS += -cpp $(call escspace,$(CPP))
+
+ifndef STATIC_LIBRARY_TARGET
+OFLAGS += $(FORCE_32_BIT)
+OFLAGS += $(LDFLAGS)
 endif
 
 # TARGETS
@@ -176,9 +156,13 @@ $(OBJ)$(MODULE).main.c: $(OBJ)$(MODULE).main.ec
 $(SYMBOLS): | objdir
 $(OBJECTS): | objdir
 $(TARGET): $(SOURCES) $(RESOURCES) $(SYMBOLS) $(OBJECTS) | objdir
+ifndef STATIC_LIBRARY_TARGET
 	$(CC) $(OFLAGS) $(OBJECTS) $(LIBS) -o $(TARGET) $(INSTALLNAME) $(SONAME)
 ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
+endif
+else
+	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
 endif
 	$(call cpq,$(TARGET),../$(SODESTDIR))
 ifdef LINUX_TARGET
@@ -343,13 +327,15 @@ $(OBJ)$(MODULE).main$(O): $(OBJ)$(MODULE).main.c
 	$(CC) $(CFLAGS) $(FVISIBILITY) -c $(OBJ)$(MODULE).main.c -o $(OBJ)$(MODULE).main$(O)
 
 clean: objdir
-	$(call rmq,$(OBJ)$(MODULE).main.c $(OBJ)$(MODULE).main.ec $(OBJ)$(MODULE).main$(I) $(OBJ)$(MODULE).main$(S) $(TARGET))
-	$(call rmq,$(OBJECTS))
+	$(call rmq,$(OBJ)$(MODULE).main.o $(OBJ)$(MODULE).main.c $(OBJ)$(MODULE).main.ec $(OBJ)$(MODULE).main$(I) $(OBJ)$(MODULE).main$(S) $(TARGET))
+	$(call rmq,$(_OBJECTS))
+	$(call rmq,$(ECOBJECTS))
 	$(call rmq,$(COBJECTS))
+	$(call rmq,$(BOWLS))
 	$(call rmq,$(IMPORTS))
 	$(call rmq,$(SYMBOLS))
 
-realclean:
+realclean: clean
 	$(call rmrq,$(OBJ))
 
 distclean:
