sdk tarball/Windows: Fixed build by removing call to escspaces - There only for CACHECC/DISTCC? To be fixed properly...

--- a/documentor/Makefile
+++ b/documentor/Makefile
@@ -105,7 +105,7 @@ ECFLAGS += \
 
 
 
-CECFLAGS += -cpp $(call escspace,$(CPP))
+CECFLAGS += -cpp $(CPP)
 
 ifndef STATIC_LIBRARY_TARGET
 OFLAGS += $(FORCE_32_BIT) \
