--- a/ide/Makefile
+++ b/ide/Makefile
@@ -233,7 +233,7 @@ endif
 
 
 
-CECFLAGS += -cpp $(call escspace,$(CPP))
+CECFLAGS += -cpp $(CPP)
 
 ifndef STATIC_LIBRARY_TARGET
 OFLAGS += $(FORCE_32_BIT) \
