--- a/compiler/ecs/Makefile
+++ b/compiler/ecs/Makefile
@@ -96,7 +96,7 @@ ECFLAGS += \
 
 
 
-CECFLAGS += -cpp $(call escspace,$(CPP))
+CECFLAGS += -cpp $(CPP)
 
 ifndef STATIC_LIBRARY_TARGET
 OFLAGS += $(FORCE_32_BIT) \
