--- a/compiler/libec/Makefile
+++ b/compiler/libec/Makefile
@@ -135,7 +135,7 @@ ECFLAGS += \
 
 
 
-CECFLAGS += -cpp $(call escspace,$(CPP))
+CECFLAGS += -cpp $(CPP)
 
 ifndef STATIC_LIBRARY_TARGET
 OFLAGS += $(FORCE_32_BIT) \
