ear/extract: Put back missing gdi32 library link

--- a/ear/extract/Makefile
+++ b/ear/extract/Makefile
@@ -132,7 +132,8 @@ ifndef STATIC_LIBRARY_TARGET
 LIBS += \
 	$(call _L,mpr) \
 	$(call _L,winmm) \
-	$(call _L,imm32)
+	$(call _L,imm32) \
+	$(call _L,gdi32)
 endif
 
 else
