build system: Fixed CCACHE/DISTCC/SYSROOT space issues - The preprocessor must be passed to ecp/ecc with -cpp "$(CPP)" - The definitions of CC/CPP/CXX must not contain any spaces - CCACHE_COMPILE/DISTCC_COMPILE must contain their own extra space at the end if set, with $(space), otherwise must be empty string

--- a/ear/cmd/Makefile
+++ b/ear/cmd/Makefile
@@ -95,7 +95,7 @@ ECFLAGS += \
 
 
 
-CECFLAGS += -cpp $(CPP)
+CECFLAGS += "-cpp $(CPP)"
 
 ifndef STATIC_LIBRARY_TARGET
 OFLAGS += $(FORCE_32_BIT) \
