--- a/documentor/Makefile
+++ b/documentor/Makefile
@@ -103,7 +103,7 @@ ECFLAGS += \
 
 
 
-CECFLAGS += -cpp $(CPP)
+CECFLAGS += "-cpp $(CPP)"
 
 ifndef STATIC_LIBRARY_TARGET
 OFLAGS += $(FORCE_32_BIT) \
